Fixed message cutoff

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -177,6 +177,7 @@ a {
 
 .chat-main {
     height: 100%;
+    margin-bottom:10vh;
 }
 
 .chat-messages {
